<resources>
    <string name="app_name">MyWeather</string>
    <string name="main_title"><b>Local Weather</b></string>
    <string name="hint_search">enter a city name...</string>
    <string name="search">SEARCH</string>
    <string name="local"><b>Local</b></string>
    <string name="today"><b>Today</b></string>
    <string name="tomorrow"><b>Tomorrow</b></string>
    <string name="loading"><b>Loading...</b></string>
    <string name="empty_string">도시 이름을 입력해주세요.</string>
    <string name="empty_location">검색된 도시가 없습니다.</string>
</resources>
