<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <EditText
        android:id="@+id/et_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@+id/bt_search"
        android:layout_toLeftOf="@+id/bt_search"
        android:ems="10"
        android:hint="@string/hint_search"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:singleLine="true"/>
    <Button
        android:id="@+id/bt_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/search"/>
    <ProgressBar
        android:id="@+id/pb_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:layout_below="@+id/et_search"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/pb_progress"
        android:background="@color/colorWhiteGray">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDarkGray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_margin="0dp"
            android:weightSum="10">
            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/colorDarkGray"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="14dp"
                android:text="@string/local"
                android:textColor="@color/colorDarkGray"/>
            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/colorDarkGray"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_weight="4"
                android:textSize="14dp"
                android:text="@string/today"
                android:textColor="@color/colorDarkGray"/>
            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/colorDarkGray"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_weight="4"
                android:textSize="14dp"
                android:text="@string/tomorrow"
                android:textColor="@color/colorDarkGray"/>
            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/colorDarkGray"
                android:layout_alignParentRight="true"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorDarkGray"/>
    </RelativeLayout>

</RelativeLayout>